--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=logmaster
 spring.datasource.password=123
 spring.datasource.url=jdbc:mariadb://192.168.77.2:3306/Syslog
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
